Update slide ids

--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,13 @@
 ---
 id: change-license
 base_name: change-license
-tags: []
+tags:
+- licensing
 presentation_date: 2017/12/17
 version: 2017.12.17
 licenses: []
-slideshare_id:
-speaker_deck_id:
+slideshare_id: ss-84299220
+speaker_deck_id: raisensubian-geng-falsehua
 ustream_id:
 vimeo_id:
 youtube_id:
